# opsys

./: AGENTS.md  CMakeLists.txt  README.md  lens_editor.cpp  main.cpp  opsys_editor.cpp  osys_editor.cpp
include/lenses/: geometry.hpp  lenses.hpp  material.hpp  medium.hpp  optical_system.hpp  ray.hpp  sag_surface.hpp  sagitta.hpp
include/opsys/: geometry.hpp  medium.hpp  opsys.hpp  optical_system.hpp  presets.hpp  ray.hpp  sagitta.hpp
include/osys/: geometry.hpp  medium.hpp  optical_system.hpp  osys.hpp  presets.hpp  ray.hpp  sagitta.hpp
tests/: trace_tests.cpp
